working registrer/login with hashing passwords

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
-change password to hash
-add authenication with gin
+change password to hash -> done
+add authenication with gin -> kinda/ in progress
 add another db table with logins and password for each user
 add encryption for passwords
 add sessions to 
