--- a/todo.txt
+++ b/todo.txt
@@ -2,5 +2,6 @@ change password to hash -> done
 add authenication with gin -> done
 add sessions to -> done
 add another db table with logins and password for each user -> done
-add encryption for passwords -> change password encryption to be able to undo
+add encryption for passwords -> change password encryption to be able to undo -> done
+crud for sites informations 
 use https instead of http
