--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,10 @@ add another db table with logins and password for each user -> done
 add encryption for passwords -> change password encryption to be able to undo -> done
 crud for sites informations -> done
 make some cool css -> done
+make passwords hidden by default->done
 
+copy password button
 add login via github/google
-make passwords hidden by default
+when editing autofill data 
 let use autogenerate password with options
 use https instead of http
