--- a/todo.txt
+++ b/todo.txt
@@ -7,10 +7,10 @@ crud for sites informations -> done
 make some cool css -> done
 make passwords hidden by default->done
 copy password button-> done
+when editing autofill data  -> done
+let use autogenerate password -> done
 
-add login via github/google
-when editing autofill data 
-let use autogenerate password with options
+add login via github/google 
 use https instead of http
 
 fix error:
